crates/plotnik-lib/tests/03-analyze/predicates/regex_empty_pattern.txt
Q = (identifier =~ //)
==== diagnostics ====
error: empty regex pattern
 --> query.ptk:1:20
  |
1 | Q = (identifier =~ //)
  |                    ^^
  |
help: put a pattern between the slashes, e.g. `=~ /^foo/`, or use a string predicate like `== "foo"`
==== symbols ====
